# Indie

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clientTest.c
client/: CMakeLists.txt  main.cpp
client/components/: Renderer.hpp
client/systems/: Draw.hpp
common/: TypeList.hpp  Vec2.hpp  Vec3.hpp
ecs/: CMakeLists.txt  Components.hpp  ECS.cpp  ECS.hpp  Ecs.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  Events.hpp  IComponent.hpp  IEntity.hpp  IScene.hpp  ISystem.hpp  Scene.hpp  SceneManager.hpp  Settings.hpp  Signature.hpp  System.hpp  TypeList.hpp  World.hpp  main.cpp
ecs/components/: Transform.hpp
ecs/examples/ex01/: Components.hpp  Makefile  ex01  main.cpp
lib/cli/: CMakeLists.txt  Parser.cpp  Parser.hpp
lib/log/: CMakeLists.txt  Logger.cpp  Logger.hpp
server/: ArgumentsParser.cpp  ArgumentsParser.hpp  CMakeLists.txt  Config.hpp  IndieServer.cpp  IndieServer.hpp  IndieStudioServer.cpp  IndieStudioServer.hpp  Logger.cpp  Logger.hpp  Server.cpp  Server.hpp  Settings.hpp  main.cpp
server/components/: Transform.hpp
server/network/: DatagramSock.hpp  StreamSock.hpp
server/server/: Config.hpp  Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp
server/systems/: CMakeLists.txt  Move.hpp
src/: main.cpp
src/server/: Server.cpp  Server.hpp
