###############################################################################
# Misc                                                                        #
###############################################################################
cmake_minimum_required(VERSION 3.16)
project(clilib)
set(CMAKE_CXX_STANDARD 17)

###############################################################################
# CLI    Source                                                               #
###############################################################################
add_library(lib_cli STATIC
    Parser.hpp
    Parser.cpp
)
