###############################################################################
# Misc                                                                        #
###############################################################################
cmake_minimum_required(VERSION 3.16)
project(loglib)
set(CMAKE_CXX_STANDARD 17)

###############################################################################
# Log Source                                                                  #
###############################################################################
add_library(lib_log STATIC
    Logger.hpp
    Logger.cpp
)
